thursday 1pm commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ cloud.key=816213892174599
 #mail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=****
-spring.mail.password=****
+spring.mail.username=mcjbcteamepic@gmail.com
+spring.mail.password=Teamepic1
 
 # Other properties
 spring.mail.properties.mail.smtp.auth=true
